09/25/2010:
    Fixed traffic and signal graph calculations
    Changed schema settings to be per-instance
    Added relevant X-AWN-AppletCategory values
    Replaced upload/download OverlayText objects with single wrapped OverlayText object
    Added +/-90 degree rotation of graph when dock in vertical mode
    Corrected border calculation
    Added new preferences -
        Applet width
        Applet font size
        Applet graph toggle
        Applet size override
        Applet traffic/signal scale
        Dialog traffic/signal scale

07/04/2010:
    Changed parsing of interfaces to use libgtop
    Removed usage of netstat
    Added interface selection via right-click context menu
    Replaced interface selection dialog with a multi-dialog which provides:
        A large traffic graph for the selected interface with plot-chart, name and peak labels
        An Interface selection list using small graphs which indicate device type and status
        An options button for selecting the graph type for wireless interfaces and displaying information about the selected interface
    Fixed devices listed in "Devices" tab not refreshing with new/removed device events
    Added check-button toggle for Kbps/KBps to right-click context menu
    Added wireless signal strength graph to applet

03/23/2010:
    Corrected issue with parsing the interface list

03/13/2010:
    applied patch from bug #534061 to fix color selection bug in preferences caused by not calling 'to_string()' in the returned gtk.gdk.Color object https://launchpad.net/bugs/534061
    

01/05/2010:
    PEP8 cleanup of all lines > 80 chars
    Rename of classes/variables for space/consistency
    Change of timer values for consistent drawing.
    Removed some unused modules.
    Removed 'blank.png' - initial icon is now created with gtk.gdk.pixbuf_new_from_xpm_data()

01/03/2010:
    Removed settings.load/load_preferences
    Fix for applet/font-sizing when changing orientation