@@ -1,3 +1,10 @@
+12/25/2010:
+    Fixed memory leak in wireless graph (bug #694378)
+    Fixed float devision caused by 0 value in multi/sum interfaces (bug #673918)
+    Fixed interface selection list not updating (bug #694380)
+    Removed traffic backfill that was causing "ghost" traffic display on applet start
+    Some minor cleanup
+
 09/25/2010:
     Fixed traffic and signal graph calculations
     Changed schema settings to be per-instance
